--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="relleno-izquierda column-2">
             <h1>Mi Experiencia:</h1>
             <h4>FCT Prácticas:</h4>
-            <p>Escuela Jesuites el Clot - 240 Horas</p>
+            <p>Escuela Jesuites el Clot</p>
             <a href="https://m.clot.fje.edu/ca"><i class="fas fa-school"></i></a>
         </div>
     </div>
