--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
         </div>
     </div>
     </div>
-
+    <div class="flex row" id="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11980.109492214955!2d2.11557015!3d41.35175875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1620153899901!5m2!1ses!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
     <div class="row flex relleno-lateral" id="section-6">
         <div class="column-1">
             <h1>Vídeo Presentación:</h1>
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/NQkWur2JcWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="720" src="https://www.youtube.com/embed/o0XXcYF79Bw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     </div>
