--- a/index.html
+++ b/index.html
@@ -91,41 +91,41 @@
         <div class="relleno-izquierda column-3">
             <h1>Mis Habilidades:</h1>
             <h4>Capacidad de trabajar en equipo:</h4>
-            <p><progress value="80" max="100">80 %</progress></p>
+            <p><progress value="90" max="100">80 %</progress></p>
             <h4>Capacidad para resolver problemas:</h4>
-            <p><progress value="70" max="100">70 %</progress></p>
-            <h4>Capacidad para tomar decisiones:</h4>
+            <p><progress value="80" max="100">70 %</progress></p>
+            <h4>Capacidad para seguir aprendiendo cosas nuevas:</h4>
             <p><progress value="80" max="100">80 %</progress></p>
             <h4>Adaptación al cambio:</h4>
             <p><progress value="90" max="100">90 %</progress></p>
             <h4>Capacidad de comunicar eficazmente:</h4>
-            <p><progress value="90" max="100">90 %</progress></p>
+            <p><progress value="100" max="100">90 %</progress></p>
         </div>
         <div class="relleno-arriba column-3">
             <h4>Proactividad:</h4>
-            <p><progress value="70" max="100">70 %</progress></p>
+            <p><progress value="75" max="100">70 %</progress></p>
             <h4>Empatía:</h4>
             <p><progress value="90" max="100">90 %</progress></p>
             <h4>Creatividad:</h4>
             <p><progress value="90" max="100">90 %</progress></p>
-            <h4>Tolerancia a la presión:</h4>
+            <h4>Capazidad de tirar las ideas hacia delante:</h4>
             <p><progress value="80" max="100">80 %</progress></p>
-            <h4>Orientación a resultados:</h4>
-            <p><progress value="80" max="100">80 %</progress></p>
+            <h4>Trabajo bajo presion:</h4>
+            <p><progress value="70" max="100">80 %</progress></p>
         </div>
     </div>
-    </div>
-    <div class="flex row" id="mapa">
+
+    <div class="flex row relleno-lateral" id="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11980.109492214955!2d2.11557015!3d41.35175875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1620153899901!5m2!1ses!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
+
     <div class="row flex relleno-lateral" id="section-6">
         <div class="column-1">
             <h1>Vídeo Presentación:</h1>
             <iframe width="100%" height="720" src="https://www.youtube.com/embed/o0XXcYF79Bw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
-    </div>
-
+</div>
     <div class="flex row relleno-lateral" id="section-4">
         <div class="column-1">
             <h3>Cambia el idioma:</h3>
