--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./img/Logo Julio.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="./js/code.js"></script>
+    <script src="./js/codigo.js"></script>
     <script src="https://kit.fontawesome.com/3cbe551640.js" crossorigin="anonymous"></script>
     <title>Currículum Vitae</title>
 </head>
