--- a/en/index.html
+++ b/en/index.html
@@ -122,7 +122,7 @@
     <div class="row flex relleno-lateral" id="section-6">
         <div class="column-1">
             <h1>Presentation Video:</h1>
-            <iframe width="100%" height="720" src="https://www.youtube.com/embed/o0XXcYF79Bw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="720" src="https://www.youtube.com/embed/Aif_rNOuA0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </div>
