--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 
     <div id="navbar">
         <a href="#header" class="active"><i class="fas fa-arrow-up"></i></a>
-        <a href="#section-1">How i am?</a>
+        <a href="#section-1">Who i am?</a>
         <a href="#section-2">My Estudies</a>
         <a href="#section-3">My Experience</a>
         <a href="#section-5">My abilities</a>
